fixed the batch bug

--- a/chessEngineTrainer.ipynb
+++ b/chessEngineTrainer.ipynb
@@ -53,29 +53,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>258805</th>\n",
-       "      <td>r3k1r1/1p3p2/pbpQp1p1/7p/3PPP2/BPn2R1P/P2q2PK/...</td>\n",
-       "      <td>35</td>\n",
+       "      <th>237198</th>\n",
+       "      <td>rnb1kb1r/ppppqppp/5n2/4p3/8/4P2N/PPPP1PPP/RNBQ...</td>\n",
+       "      <td>163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97451</th>\n",
-       "      <td>3r1r2/5pkp/4p1p1/p1p5/4NP1N/1qR1P3/5QPP/5RK1 b...</td>\n",
-       "      <td>-394</td>\n",
+       "      <th>6112</th>\n",
+       "      <td>r1bqk2r/pp3ppp/2n1p3/8/3P4/2nB1N2/P4PPP/R1B1QR...</td>\n",
+       "      <td>-54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46778</th>\n",
-       "      <td>r2q1rk1/p1bpnppp/5n2/1Np5/1PP5/P5P1/4NPKP/R1BQ...</td>\n",
-       "      <td>78</td>\n",
+       "      <th>197789</th>\n",
+       "      <td>rnbqk1nr/ppp1bppp/8/4p3/3PP3/5N2/PPP3PP/RNBQKB...</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209753</th>\n",
-       "      <td>rn1R4/p1p1Q3/1p4p1/1k2p1N1/4B3/8/PPP2PP1/2K4R ...</td>\n",
-       "      <td>-8494</td>\n",
+       "      <th>38144</th>\n",
+       "      <td>r1bqkbnr/pppn1ppp/3pp3/8/2BPP3/8/PPP2PPP/RNBQK...</td>\n",
+       "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27388</th>\n",
-       "      <td>r7/8/4p3/4Pk1p/r2Pn1P1/PRPK4/8/R3B3 b - - 0 38</td>\n",
-       "      <td>-160</td>\n",
+       "      <th>10617</th>\n",
+       "      <td>r4rk1/ppqnbppp/2pp1nb1/4p1B1/3PP1P1/2PB1N1P/PP...</td>\n",
+       "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -83,29 +83,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>170271</th>\n",
-       "      <td>r2qk2r/pp1nnbpp/2p2p2/3pb3/8/1P2P1P1/PBPNNPBP/...</td>\n",
-       "      <td>34</td>\n",
+       "      <th>217742</th>\n",
+       "      <td>2k5/1pp3p1/6q1/8/3R2b1/1P2P1b1/P2P1r1P/3K4 w -...</td>\n",
+       "      <td>-727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251534</th>\n",
-       "      <td>4k2r/p3p1b1/2p3pp/1q3p2/1r1P4/1PQ1PN1P/P4PP1/R...</td>\n",
-       "      <td>301</td>\n",
+       "      <th>1930</th>\n",
+       "      <td>rn2kb1r/pp2pppp/2p1b3/q2n4/2pP4/2N1PNB1/PPQ2PP...</td>\n",
+       "      <td>-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>207207</th>\n",
-       "      <td>1r1qr1k1/1pp1b1pp/p2pb3/4n1P1/8/2N1BN1P/PPPQ1P...</td>\n",
-       "      <td>7</td>\n",
+       "      <th>240429</th>\n",
+       "      <td>r1b3k1/ppp2pp1/5n1p/n3N2P/1q2p1P1/4P2B/3N1P2/R...</td>\n",
+       "      <td>-85</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>170643</th>\n",
-       "      <td>rn1Qk1nr/pbp2pbp/1p2p1p1/4P3/5B2/2N2N2/PPP2PPP...</td>\n",
-       "      <td>-60</td>\n",
+       "      <th>199491</th>\n",
+       "      <td>2qk4/7p/3P2p1/5p2/2KQ1P1P/8/7P/8 w - - 9 40</td>\n",
+       "      <td>334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>239104</th>\n",
-       "      <td>r1b2bnr/pppp1k1p/3qp1p1/3n3B/3P4/P1N2Q2/1PP2PP...</td>\n",
-       "      <td>234</td>\n",
+       "      <th>57022</th>\n",
+       "      <td>8/8/8/6bk/1P6/2B5/1K2q1P1/8 w - - 3 58</td>\n",
+       "      <td>-551</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -114,17 +114,17 @@
       ],
       "text/plain": [
        "                                                fen_value  score\n",
-       "258805  r3k1r1/1p3p2/pbpQp1p1/7p/3PPP2/BPn2R1P/P2q2PK/...     35\n",
-       "97451   3r1r2/5pkp/4p1p1/p1p5/4NP1N/1qR1P3/5QPP/5RK1 b...   -394\n",
-       "46778   r2q1rk1/p1bpnppp/5n2/1Np5/1PP5/P5P1/4NPKP/R1BQ...     78\n",
-       "209753  rn1R4/p1p1Q3/1p4p1/1k2p1N1/4B3/8/PPP2PP1/2K4R ...  -8494\n",
-       "27388      r7/8/4p3/4Pk1p/r2Pn1P1/PRPK4/8/R3B3 b - - 0 38   -160\n",
+       "237198  rnb1kb1r/ppppqppp/5n2/4p3/8/4P2N/PPPP1PPP/RNBQ...    163\n",
+       "6112    r1bqk2r/pp3ppp/2n1p3/8/3P4/2nB1N2/P4PPP/R1B1QR...    -54\n",
+       "197789  rnbqk1nr/ppp1bppp/8/4p3/3PP3/5N2/PPP3PP/RNBQKB...    175\n",
+       "38144   r1bqkbnr/pppn1ppp/3pp3/8/2BPP3/8/PPP2PPP/RNBQK...     69\n",
+       "10617   r4rk1/ppqnbppp/2pp1nb1/4p1B1/3PP1P1/2PB1N1P/PP...     22\n",
        "...                                                   ...    ...\n",
-       "170271  r2qk2r/pp1nnbpp/2p2p2/3pb3/8/1P2P1P1/PBPNNPBP/...     34\n",
-       "251534  4k2r/p3p1b1/2p3pp/1q3p2/1r1P4/1PQ1PN1P/P4PP1/R...    301\n",
-       "207207  1r1qr1k1/1pp1b1pp/p2pb3/4n1P1/8/2N1BN1P/PPPQ1P...      7\n",
-       "170643  rn1Qk1nr/pbp2pbp/1p2p1p1/4P3/5B2/2N2N2/PPP2PPP...    -60\n",
-       "239104  r1b2bnr/pppp1k1p/3qp1p1/3n3B/3P4/P1N2Q2/1PP2PP...    234\n",
+       "217742  2k5/1pp3p1/6q1/8/3R2b1/1P2P1b1/P2P1r1P/3K4 w -...   -727\n",
+       "1930    rn2kb1r/pp2pppp/2p1b3/q2n4/2pP4/2N1PNB1/PPQ2PP...    -16\n",
+       "240429  r1b3k1/ppp2pp1/5n1p/n3N2P/1q2p1P1/4P2B/3N1P2/R...    -85\n",
+       "199491        2qk4/7p/3P2p1/5p2/2KQ1P1P/8/7P/8 w - - 9 40    334\n",
+       "57022              8/8/8/6bk/1P6/2B5/1K2q1P1/8 w - - 3 58   -551\n",
        "\n",
        "[50000 rows x 2 columns]"
       ]
@@ -178,13 +178,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 9,  0,  0,  ...,  0, 29, 32],\n",
-       "        [ 0,  0,  0,  ...,  0, 29, 25],\n",
-       "        [ 9,  0,  0,  ...,  0, 34, 34],\n",
+       "tensor([[ 9, 11, 10,  ...,  0, 39, 39],\n",
+       "        [ 9,  0, 10,  ...,  0, 33, 34],\n",
+       "        [ 9, 11, 10,  ...,  0, 38, 38],\n",
        "        ...,\n",
-       "        [ 0,  9,  0,  ...,  0, 34, 34],\n",
-       "        [ 9, 11,  0,  ...,  0, 38, 29],\n",
-       "        [ 9,  0, 10,  ...,  0, 35, 38]], dtype=torch.int32)"
+       "        [ 9,  0, 10,  ...,  0, 32, 30],\n",
+       "        [ 0,  0,  8,  ...,  0, 13, 12],\n",
+       "        [ 0,  0,  0,  ...,  0,  5, 12]], dtype=torch.int32)"
       ]
      },
      "execution_count": 6,
@@ -324,11 +324,12 @@
     "# hyperparameters\n",
     "lr = 0.1\n",
     "num_steps = 500\n",
-    "warmup_steps = 50\n",
-    "bs = len(X)\n",
+    "warmup_steps = 20\n",
+    "bs_train = len(X)\n",
+    "bs_eval = 10000\n",
     "# allowed_error = 100 #\n",
     "d1 = {1:10, 2:20}\n",
-    "if bs > len(X): bs = len(X)"
+    "if bs_train > len(X): bs_train = len(X)"
    ]
   },
   {
@@ -346,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MLPEngine(embedding_dim=64, bs = bs).to(device)\n",
+    "model = MLPEngine(embedding_dim=64, bs_train = bs_train, bs_eval=bs_eval).to(device)\n",
     "loss_category = nn.MSELoss()\n",
     "optimiser = torch.optim.AdamW(\n",
     "            model.parameters(), \n",
@@ -390,113 +391,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "0 :  3141694.5\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "1 :  3168970.0\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "2 :  3144071.0\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "3 :  3197998.0\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "4 :  3093024.0\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "5 :  3218321.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "6 :  3069692.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "7 :  2993385.75\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "8 :  3153170.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "9 :  3147099.5\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "10 :  3050829.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "11 :  3043022.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "12 :  3247355.75\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "13 :  3149536.0\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "14 :  3052564.75\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "15 :  2996636.25\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n",
-      "16 :  3089285.75\n",
-      "torch.Size([30000, 200])\n",
-      "test 1\u001b[0m\n",
-      "\u001b[31mtorch.Size([30000, 12800])\u001b[0m\n",
-      "30000\u001b[0m\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 19\u001b[0m\n\u001b[1;32m     17\u001b[0m scheduler\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# print(f\"Epoch {step_i}, Learning Rate: {scheduler.get_last_lr()}\")\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m \u001b[38;5;28mprint\u001b[39m(tot_step, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m: \u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m tot_step \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m tot_step \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;66;03m# validation phase\u001b[39;00m\n\u001b[1;32m     23\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m model(X_val)\u001b[38;5;241m.\u001b[39mview(val_split)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "0 :  3016927.5\n",
+      "1 :  3011849.25\n",
+      "2 :  3040441.75\n",
+      "3 :  3041635.0\n",
+      "4 :  3042979.0\n",
+      "5 :  3114352.25\n",
+      "6 :  3056656.25\n",
+      "7 :  3144858.75\n",
+      "8 :  3151143.5\n",
+      "9 :  3153551.5\n",
+      "10 :  3264073.5\n",
+      "11 :  2979139.25\n",
+      "12 :  3063376.0\n",
+      "13 :  3001871.25\n",
+      "14 :  3135872.5\n",
+      "15 :  2881217.75\n",
+      "16 :  2867523.5\n",
+      "17 :  2845629.25\n",
+      "18 :  3010931.5\n",
+      "19 :  2820270.75\n",
+      "20 :  2757164.25\n",
+      "21 :  2761374.25\n",
+      "22 :  2568236.0\n",
+      "23 :  2461835.25\n",
+      "24 :  2273523.0\n",
+      "25 :  2248040.25\n",
+      "26 :  2170841.0\n",
+      "27 :  2065784.875\n",
+      "28 :  1944858.375\n",
+      "29 :  1722006.5\n",
+      "30 :  1725616.125\n",
+      "31 :  1545782.875\n",
+      "32 :  1313766.375\n",
+      "33 :  1327864.0\n",
+      "34 :  1053982.75\n",
+      "35 :  1009687.5\n",
+      "36 :  933412.125\n",
+      "37 :  804957.375\n",
+      "38 :  670455.0\n",
+      "39 :  565281.3125\n",
+      "40 :  516536.90625\n",
+      "41 :  421120.34375\n",
+      "42 :  367956.9375\n",
+      "43 :  345027.125\n",
+      "44 :  310323.75\n",
+      "45 :  298465.75\n",
+      "46 :  249754.828125\n",
+      "47 :  258057.53125\n",
+      "48 :  234494.5\n",
+      "49 :  230769.359375\n",
+      "50 :  207552.59375\n",
+      "51 :  218473.140625\n",
+      "52 :  204941.328125\n",
+      "53 :  211099.203125\n",
+      "54 :  169162.21875\n",
+      "55 :  178440.296875\n",
+      "56 :  164935.453125\n",
+      "57 :  133069.28125\n",
+      "58 :  114658.8359375\n",
+      "59 :  107367.625\n",
+      "60 :  98363.2421875\n",
+      "61 :  108039.5859375\n",
+      "62 :  94567.1875\n",
+      "63 :  90145.078125\n",
+      "64 :  83145.59375\n",
+      "65 :  84369.0859375\n",
+      "66 :  78685.25\n",
+      "67 :  73233.4609375\n",
+      "68 :  68818.7265625\n",
+      "69 :  76676.2421875\n",
+      "70 :  63275.6640625\n",
+      "71 :  59030.20703125\n",
+      "72 :  62095.9453125\n",
+      "73 :  61057.22265625\n",
+      "74 :  49871.34765625\n",
+      "75 :  51024.375\n",
+      "76 :  49531.32421875\n",
+      "77 :  55683.93359375\n",
+      "78 :  57402.67578125\n",
+      "79 :  56671.47265625\n",
+      "80 :  48451.01171875\n",
+      "81 :  47021.33984375\n",
+      "82 :  46648.76953125\n",
+      "83 :  53069.5\n",
+      "84 :  45137.8515625\n",
+      "85 :  41762.265625\n",
+      "86 :  41853.93359375\n",
+      "87 :  38500.0625\n",
+      "88 :  40980.8359375\n",
+      "89 :  41616.71484375\n",
+      "90 :  44426.7890625\n",
+      "91 :  42200.84765625\n",
+      "92 :  37482.734375\n",
+      "93 :  34050.3671875\n",
+      "94 :  39311.4375\n",
+      "95 :  36894.703125\n",
+      "96 :  37566.703125\n",
+      "97 :  37497.37109375\n",
+      "98 :  35270.48046875\n",
+      "99 :  35045.06640625\n",
+      "100 :  35674.80078125\n"
      ]
     }
    ],
@@ -507,10 +509,9 @@
     "for step_i in range(num_steps):\n",
     "    tot_step = step_i + start_step\n",
     "    optimiser.zero_grad()\n",
-    "    x_batch, y_batch = get_batch(X, y, bs) \n",
+    "    x_batch, y_batch = get_batch(X, y, bs_train) \n",
     "    # print(x_batch, y_batch)\n",
-    "    print(x_batch.shape)\n",
-    "    y_pred = model(x_batch).view(bs)\n",
+    "    y_pred = model(x_batch).view(bs_train)\n",
     "    # print(y_pred.shape, y_batch.shape)\n",
     "    loss = loss_category(y_pred, y_batch)\n",
     "    # print(loss.item())\n",
@@ -522,12 +523,14 @@
     "    print(tot_step, ': ',loss.item())\n",
     "\n",
     "    if tot_step % 100 == 0 and tot_step != 0:\n",
+    "        model.eval()\n",
     "        # validation phase\n",
     "        y_pred = model(X_val).view(val_split)\n",
     "        # print(y_pred.shape, y_batch.shape)\n",
     "        loss = loss_category(y_pred, y_val)\n",
     "        # print(loss.item())\n",
     "        val_history[tot_step] = loss.item()\n",
+    "        model.train()\n",
     "\n",
     "start_step += num_steps"
    ]
@@ -538,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), 'saves/bad_model.pt')"
+    "torch.save(model.state_dict(), 'saves/bad_model2.pt')"
    ]
   },
   {
@@ -597,7 +600,7 @@
     "- [x] **Fix the bug in initialisation\n",
     "- [ ] implement weights and biases or tensorboard \n",
     "- [ ] improve the model\n",
-    "  - [ ] get a better/ bigger dataset\n",
+    "  - [x] get a better/ bigger dataset\n",
     "  - [ ] hyperparameter and architecture\n",
     "    - [x] better encoding\n",
     "    - [ ] residual connections\n",
@@ -619,14 +622,6 @@
    "metadata": {},
    "source": [
     "# Note"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- some issue after the whole architecture was changed in gui file.\n",
-    "- also the dataset is bad, look for a new one. "
    ]
   }
  ],
